--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -1,18 +1,25 @@
 name: Terraform Apply
 
 on:
-  workflow_run:
-    workflows: ["Terraform Plan"]
-    types:
-      - completed
+  workflow_dispatch: # Requires manual approval
+    inputs:
+      environment:
+        description: "Select the deployment environment"
+        required: true
+        default: "production"
+      apply_terraform:
+        description: "Run terraform apply?"
+        required: true
+        type: boolean
 
 jobs:
   terraform:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
+
+    environment: ${{ inputs.environment }} # Dynamically select environment
 
     defaults:
       run:
@@ -35,4 +42,5 @@ jobs:
       run: terraform init
 
     - name: Terraform Apply
+      if: ${{ inputs.apply_terraform }} # Correct boolean check
       run: terraform apply -auto-approve
