--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -44,7 +44,8 @@ jobs:
       - name: Wait for manual approval
         id: approval
         run: |
-          if [[ "${{ github.event.inputs.approval }}" != "yes" ]]; then
+          APPROVAL="${{ github.event.inputs.approval }}"
+          if [[ "$APPROVAL" != "yes" ]]; then
             echo "Approval input was not 'yes'. Exiting the workflow."
             exit 1
           else
