--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -6,9 +6,6 @@ on:
       approval:
         description: 'Type "yes" to apply changes'
         required: true
-        options:
-          - yes
-          - no
 
 jobs:
   terraform-apply:
@@ -18,7 +15,7 @@ jobs:
       contents: read
 
     # Check if the first workflow has completed successfully
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       # Checkout the code from the repository
