--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: tfplan
-        path: ./tfplan
+        path: ./
 
     # Validate the Terraform plan (ensure to confirm apply if it's in production)
     - name: Terraform Validate
