--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,14 +54,7 @@ jobs:
 
     # Terraform plan to see what changes are pending
     - name: Terraform Plan
-      run: terraform plan -out=tfplan
-
-    # Upload the Terraform plan as an artifact for later use
-    - name: Upload tfplan artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: terraformArtifactes
-        path: tfplan
+      run: terraform plan
 
     # Validate the Terraform plan (ensure to confirm apply if it's in production)
     - name: Terraform Validate
