--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -32,7 +32,6 @@ jobs:
 
       # Wait for manual approval from the user
       - name: Wait for manual approval
-        id: approval
         run: |
           APPROVAL="${{ github.event.inputs.approval }}"
           if [[ "$APPROVAL" != "yes" ]]; then
@@ -45,6 +44,9 @@ jobs:
       # Initialize Terraform
       - name: Terraform Init
         run: terraform init
+
+      - name: Terraform Plan
+        run: terraform plan
 
       # Apply the Terraform plan to create the infrastructure
       - name: Terraform Apply
