--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -50,4 +50,7 @@ jobs:
 
       # Apply the Terraform plan to create the infrastructure
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply --auto-approve
+
+      - name: Terraform Destroy
+        run: terraform destroy --auto-approve
