--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -13,6 +13,9 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    defaults:
+      run:
+        working-directory: ./bq-training-assignment-terraform
 
     steps:
     # Checkout the code from the repository
