--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   terraform-apply:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       id-token: write
       contents: read
