--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -63,6 +63,12 @@ jobs:
           echo "Approval received. Proceeding with Terraform apply."
         fi
 
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+      
+    - name: Terraform Init
+      run: terraform init
+
     - name: Terraform Plan
       run: terraform plan
 
