--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -63,6 +63,12 @@ jobs:
           echo "Approval received. Proceeding with Terraform apply."
         fi
 
+    - name: Configure AWS credentials using OIDC
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
+        aws-region: us-east-1
+    
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3
       
