--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -52,6 +52,10 @@ jobs:
       id-token: write
       contents: read
 
+    defaults:
+      run:
+        working-directory: bq-training-assignment-terraform
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
