--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -58,6 +58,18 @@ jobs:
 
     steps:
 
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Configure AWS credentials using OIDC
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
+        aws-region: us-east-1
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+
     - name: Wait for manual approval
       run: |
         APPROVAL="${{ github.event.inputs.approval }}"
@@ -67,6 +79,15 @@ jobs:
         else
           echo "Approval received. Proceeding with Terraform apply."
         fi
+
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Plan
+      run: terraform plan
+
+    - name: Terraform Validate
+      run: terraform validate
 
     - name: Terraform Apply
       run: terraform apply --auto-approve
