--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,49 @@
 
 #     - name: Terraform Validate
 #       run: terraform validate
+
+
+name: Terraform Build
+
+on:
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  terraform:
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        environment: [staging, deployment]  # Run Terraform Build for both environments in parallel
+    permissions:
+      id-token: write
+      contents: read
+
+    environment: ${{ matrix.environment }}  # Set the environment dynamically
+
+    defaults:
+      run:
+        working-directory: bq-training-assignment-terraform
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials using OIDC
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
+          aws-region: us-east-1
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+      
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Plan
+        run: terraform plan
+
+      - name: Terraform Validate
+        run: terraform validate
