--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,88 @@
+name: Terraform Build
+
+on:
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  terraform-dev:
+    runs-on: self-hosted
+    permissions:
+      id-token: write
+      contents: read
+
+    defaults:
+      run:
+        working-directory: bq-training-assignment-terraform
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Configure AWS credentials using OIDC
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
+        aws-region: us-east-1
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+
+    - name: Terraform Workspace(dev)
+      run: terraform workspace select dev || terraform workspace new dev
+      
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Plan
+      run: terraform plan
+
+    - name: Terraform Validate
+      run: terraform validate
+
+  terraform-staging:
+    runs-on: self-hosted
+    permissions:
+      id-token: write
+      contents: read
+
+    defaults:
+      run:
+        working-directory: bq-training-assignment-terraform
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Configure AWS credentials using OIDC
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
+        aws-region: us-west-1
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+
+    - name: Terraform Workspace(dev)
+      run: terraform workspace select staging || terraform workspace new staging
+
+    - name: Terraform Region for accepeter
+      run: sed -i '/variable "aws_region_accepter"/,/}/s/\(default = "\)[^"]*\(".*\)/\1us-west-1\2/' main.tf
+
+    - name: Terraform Region for requester
+      run: sed -i '/variable "aws_region_requester"/,/}/s/\(default = "\)[^"]*\(".*\)/\1us-west-2\2/' main.tf
+      
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Plan
+      run: terraform plan
+
+    - name: Terraform Validate
+      run: terraform validate
+
+
 # name: Terraform Build
 
 # on:
@@ -8,78 +93,37 @@
 # jobs:
 #   terraform:
 #     runs-on: self-hosted
+#     strategy:
+#       matrix:
+#         environment: [staging, deployment]  # Run Terraform Build for both environments in parallel
 #     permissions:
 #       id-token: write
 #       contents: read
+
+#     environment: ${{ matrix.environment }}  # Set the environment dynamically
 
 #     defaults:
 #       run:
 #         working-directory: bq-training-assignment-terraform
 
 #     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v3
+#       - name: Checkout code
+#         uses: actions/checkout@v3
 
-#     - name: Configure AWS credentials using OIDC
-#       uses: aws-actions/configure-aws-credentials@v3
-#       with:
-#         role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
-#         aws-region: us-east-1
+#       - name: Configure AWS credentials using OIDC
+#         uses: aws-actions/configure-aws-credentials@v3
+#         with:
+#           role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
+#           aws-region: us-east-1
 
-#     - name: Set up Terraform
-#       uses: hashicorp/setup-terraform@v3
+#       - name: Set up Terraform
+#         uses: hashicorp/setup-terraform@v3
       
-#     - name: Terraform Init
-#       run: terraform init
+#       - name: Terraform Init
+#         run: terraform init
 
-#     - name: Terraform Plan
-#       run: terraform plan
+#       - name: Terraform Plan
+#         run: terraform plan
 
-#     - name: Terraform Validate
-#       run: terraform validate
-
-
-name: Terraform Build
-
-on:
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  terraform:
-    runs-on: self-hosted
-    strategy:
-      matrix:
-        environment: [staging, deployment]  # Run Terraform Build for both environments in parallel
-    permissions:
-      id-token: write
-      contents: read
-
-    environment: ${{ matrix.environment }}  # Set the environment dynamically
-
-    defaults:
-      run:
-        working-directory: bq-training-assignment-terraform
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Configure AWS credentials using OIDC
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: arn:aws:iam::522814707398:role/role-for-github-workflow
-          aws-region: us-east-1
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-      
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Plan
-        run: terraform plan
-
-      - name: Terraform Validate
-        run: terraform validate
+#       - name: Terraform Validate
+#         run: terraform validate
