--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,11 +70,17 @@ jobs:
     - name: Terraform Workspace(staging)
       run: terraform workspace select staging || terraform workspace new staging
 
+    - name: Show variables.tf file
+      run: cat variables.tf
+
     - name: Terraform Region for accepeter
       run: sed -i '/variable "aws_region_accepter"/,/}/s/\(default = "\)[^"]*\(".*\)/\1us-west-1\2/' variables.tf
 
     - name: Terraform Region for requester
       run: sed -i '/variable "aws_region_requester"/,/}/s/\(default = "\)[^"]*\(".*\)/\1us-west-2\2/' variables.tf
+
+    - name: Show variables.tf file
+      run: cat variables.tf
 
     - name: Terraform Init again
       run: terraform init
