--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,21 +73,15 @@ jobs:
     - name: Show variables.tf file
       run: cat variables.tf
 
-    - name: Terraform Region for accepeter
-      run: sed -i '/variable "aws_region_accepter"/,/}/s/\(default = "\)[^"]*\(".*\)/\1us-west-1\2/' variables.tf
-
-    - name: Terraform Region for requester
-      run: sed -i '/variable "aws_region_requester"/,/}/s/\(default = "\)[^"]*\(".*\)/\1us-west-2\2/' variables.tf
-
     - name: Show variables.tf file
       run: cat variables.tf
 
     - name: Terraform Init again
       run: terraform init
 
-    - name: Terraform Plan
-      run: terraform plan
-
+    - name: Terraform Plan with dynamic regions
+      run: terraform plan -var="aws_region_accepter=us-west-1" -var="aws_region_requester=us-west-2"
+      
     - name: Show variables.tf file
       run: cat variables.tf
 
