--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,10 +71,10 @@ jobs:
       run: terraform workspace select staging || terraform workspace new staging
 
     - name: Terraform Validate
-      run: terraform validate -var-file="staging-variables.tf"
+      run: terraform validate -var="aws_region_accepter=us-west-2" -var="aws_region_requester=us-west-1"
 
     - name: Terraform Plan with dynamic regions
-      run: terraform plan -var-file="staging-variables.tf"
+      run: terraform plan -var="aws_region_accepter=us-west-2" -var="aws_region_requester=us-west-1"
       
 
 
